--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.460.0",
     "mongodb": "^6.12.0",
     "next": "14.2.18",
