Enhance CotizacionEditor and related components to support apellidoArrendatario field; update form handling for improved user experience, integrate country code selection for phone numbers, and ensure proper PDF generation with full client names.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
