--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "jspdf": "^2.5.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.460.0",
     "mongodb": "^6.12.0",
     "next": "14.2.18",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
